# pulsewire

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  STYLE.md  alembic.ini  config.yaml  docker-compose.yml  pyproject.toml  sources.yaml
.github/workflows/: ci.yml
desktop/: README.md  main.js  package-lock.json  package.json  preload.js
desktop/icon/: build_icns.sh  icon.icns  make_icon.py
docs/: ARCHITECTURE.md  DESIGN.md
evals/: README.md  cases.jsonl  graders.py  run_local.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_rankings.py  0003_summaries.py  0004_insight.py  0005_timeline_stars.py  (+7 more)
tests/: conftest.py  test_alert.py  test_archive.py  test_audit.py  test_cli.py  test_clip_downstream.py  test_config.py  test_dedup_engine.py  test_dedup_eval.py  test_deliver.py  test_deliver_dates.py  test_enrich.py  test_events_allocate.py  test_events_board_classifier.py  test_events_board_only.py  test_events_cleantext.py  test_events_clip_integration.py  test_events_clip_memory.py  test_events_cluster.py  test_events_gate_pool.py  test_events_judge_merge.py  test_events_magnitude.py  test_events_score.py  test_events_select.py  test_events_shell_guard.py  test_events_topic.py  test_events_worthiness.py  test_feishu_app.py  test_feishu_card.py  test_fetch.py  test_fetch_rss_guard.py  test_github_board.py  test_github_cross_board.py  test_github_dedup.py  test_github_velocity.py  test_grade_cardvec_pipeline.py  test_grade_github_v2.py  test_hot_news_ungraded.py  test_ids.py  test_judgment_cache.py  (+21 more)
(+94 files in other folders)
