[project]
name = "pulsewire"
version = "0.1.0"
description = "本地新闻情报引擎:多源抓取→事件引擎选稿→LLM 判官质检→数字回源 0 编造→剪报本日报(网页/桌面App/飞书)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
dependencies = [
  # 抓取
  "httpx>=0.27",
  "aiolimiter>=1.1",
  "tenacity>=8.3",
  "feedparser>=6.0",
  "selectolax>=0.3",
  "lxml>=5.2",
  "trafilatura>=1.9",
  "playwright>=1.44",
  # 存储
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "pgvector>=0.3",
  "alembic>=1.13",
  # 去重:本地 embedding(fastembed/ONNX,bge-m3 多语 1024 维),$0 离线
  "fastembed>=0.3",
  # 配置 / 数据契约
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  # LLM / 出图
  "litellm>=1.40",
  "jinja2>=3.1",
  # 调度 / 可观测
  "apscheduler>=3.10",
  "structlog>=24.1",
  "mlx-embeddings>=0.1 ; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[project.scripts]
pulsewire = "pulsewire.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulsewire"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
